feat: equidistant point placement

--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -15,7 +15,7 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "def create_3d_hit_plot(hits, color_col):\n",
+    "def create_3d_hit_plot(hits, color_col, point_size=1):\n",
     "    # Define a colormap\n",
     "    unique_t_values = np.sort(hits[color_col].unique())\n",
     "    N_t = len(unique_t_values)\n",
@@ -41,7 +41,7 @@
     "        \n",
     "        colors = filtered_hits[color_col].map(t_to_color)\n",
     "        sc = ax.scatter(\n",
-    "            filtered_hits[\"z\"], filtered_hits[\"x\"], filtered_hits[\"y\"], c=colors, alpha=0.5\n",
+    "            filtered_hits[\"z\"], filtered_hits[\"x\"], filtered_hits[\"y\"], c=colors, alpha=0.5, s=point_size\n",
     "        )\n",
     "\n",
     "        # Add color bar\n",
@@ -89,25 +89,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sinusoid Strategy\n",
+    "## Sinusoid Strategy and Equidistant Strategy\n",
     "\n",
-    "Th cell below creates points with the sinusoid strategy. Try using different values for `step_size_multiplier`. Note the following:\n",
+    "Th cell below creates points with the sinusoid and equidistant strategies. Try using different values for `step_size_multiplier` for sinusoid. Note the following:\n",
     "1. Values below 2 are not a good choice because the generated values will not cover the full circle\n",
     "2. Even values are not a good choice because they will repeat the points after every rotation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_19730/4025609258.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/941641156.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_19730/4025609258.py:63: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/941641156.py:63: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  gt_hits_df = pd.concat([gt_hits_df, gt_hits_df_new], ignore_index=True)\n"
      ]
     }
@@ -127,11 +127,12 @@
     "from src.Util.Globals import DATA_DIR\n",
     "from src.Util import CoordinateSystemEnum\n",
     "from src.Data.CollisionEventLoader import CollisionEventLoader\n",
-    "from src.TimeStep.ForAdjusting.PlacementStrategy import SinusoidStrategy\n",
+    "from src.TimeStep.ForAdjusting.PlacementStrategy import SinusoidStrategy, EquidistantStrategy\n",
     "from src.TimeStep.ForAdjusting.VolumeLayer import VLTimeStep\n",
     "\n",
     "normalize_hits = False\n",
-    "strategy = SinusoidStrategy(step_size_multiplier=13.87193)\n",
+    "# strategy = SinusoidStrategy(step_size_multiplier=13.87193)\n",
+    "strategy = EquidistantStrategy()\n",
     "time_step = VLTimeStep(placement_strategy=strategy, normalize_hits=normalize_hits)\n",
     "\n",
     "root_dir = os.path.dirname(os.path.abspath(os.getcwd()))\n",
@@ -165,9 +166,8 @@
     "    gt_size = F.pad(gt_size, (0, num_parts * batch_size - gt_size.size(0)), value=0)\n",
     "    gt_size = gt_size.view(batch_size, num_parts)\n",
     "\n",
-    "    hits_t = time_step.place_hits(\n",
-    "        t, gt_size, coordinate_system=CoordinateSystemEnum.CARTESIAN\n",
-    "    )\n",
+    "    # size = torch.ones_like(gt_size) * 1000\n",
+    "    hits_t = time_step.place_hits(t, gt_size, coordinate_system=CoordinateSystemEnum.CARTESIAN)\n",
     "\n",
     "    hits_df_new = pd.DataFrame(hits_t.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
     "    hits_df_new[\"t\"] = t\n",
@@ -180,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b65a8b12a0fa48b9bf6eefaa60807435",
+       "model_id": "0024ef9b1f214270ba7ec718a8c10713",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5cca603ad40470c9c2b0ddc17576c48",
+       "model_id": "2a91db8503df4ec88a9440dae85d0532",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +221,7 @@
     "\n",
     "combined_df = pd.concat([s_hits_df, s_gt_hits_df], ignore_index=True)\n",
     "\n",
-    "create_3d_hit_plot(combined_df, color_col = \"t\")"
+    "create_3d_hit_plot(combined_df, color_col = \"t\", point_size=5)"
    ]
   }
  ],
