feat: create precomputing script

--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/941641156.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/3362028377.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/941641156.py:63: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_64578/3362028377.py:69: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  gt_hits_df = pd.concat([gt_hits_df, gt_hits_df_new], ignore_index=True)\n"
      ]
     }
@@ -120,10 +120,12 @@
     "import torch\n",
     "from torch import Tensor\n",
     "from torch.nn import functional as F\n",
+    "from tqdm import trange\n",
     "\n",
     "# Add the parent directory to the Python path\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "\n",
+    "from src.Pairing import RepeatedKDTreeStrategy\n",
     "from src.Util.Globals import DATA_DIR\n",
     "from src.Util import CoordinateSystemEnum\n",
     "from src.Data.CollisionEventLoader import CollisionEventLoader\n",
@@ -132,8 +134,9 @@
     "\n",
     "normalize_hits = False\n",
     "# strategy = SinusoidStrategy(step_size_multiplier=13.87193)\n",
-    "strategy = EquidistantStrategy()\n",
-    "time_step = VLTimeStep(placement_strategy=strategy, normalize_hits=normalize_hits)\n",
+    "placement_strategy = EquidistantStrategy()\n",
+    "pairing_strategy = RepeatedKDTreeStrategy()\n",
+    "time_step = VLTimeStep(placement_strategy=placement_strategy, normalize_hits=normalize_hits)\n",
     "\n",
     "root_dir = os.path.dirname(os.path.abspath(os.getcwd()))\n",
     "coordinate_system = CoordinateSystemEnum.CARTESIAN\n",
@@ -152,7 +155,9 @@
     "num_t = time_step.get_num_time_steps()\n",
     "gt_hits_list, gt_batch_index, _ = next(iter(data_loader))\n",
     "\n",
-    "for t in range(num_t):\n",
+    "pairings = []\n",
+    "\n",
+    "for t in trange(num_t):\n",
     "    gt_hits = gt_hits_list[t]\n",
     "    gt_index = gt_batch_index[t]\n",
     "\n",
@@ -169,6 +174,8 @@
     "    # size = torch.ones_like(gt_size) * 1000\n",
     "    hits_t = time_step.place_hits(t, gt_size, coordinate_system=CoordinateSystemEnum.CARTESIAN)\n",
     "\n",
+    "    pairings.append(pairing_strategy.create_pairs(hits_t, gt_hits, gt_index, gt_index)[0])\n",
+    "\n",
     "    hits_df_new = pd.DataFrame(hits_t.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
     "    hits_df_new[\"t\"] = t\n",
     "    hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
@@ -180,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0024ef9b1f214270ba7ec718a8c10713",
+       "model_id": "ca8fb2442d5e4ffab397fe39ec4b9416",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a91db8503df4ec88a9440dae85d0532",
+       "model_id": "237148f81d634c7db252b93c0cb48a69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,8 +220,10 @@
     }
    ],
    "source": [
-    "s_hits_df = hits_df.sample(frac=0.1)\n",
-    "s_gt_hits_df = gt_hits_df.sample(frac=0.1)\n",
+    "s_indices = hits_df.sample(frac=0.1).index\n",
+    "\n",
+    "s_hits_df = hits_df.loc[s_indices]\n",
+    "s_gt_hits_df = gt_hits_df.loc[s_indices]\n",
     "\n",
     "s_hits_df[\"t\"] = s_hits_df[\"t\"] * 2\n",
     "s_gt_hits_df[\"t\"] = s_gt_hits_df[\"t\"] * 2 + 1\n",
