feat: Precomputed hit set loader
feat: precomputed data loader

create gt_size file in script

fix: data loader and precomputer

--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -126,7 +126,7 @@
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "\n",
     "from src.Pairing import RepeatedKDTreeStrategy\n",
-    "from src.Util.Globals import DATA_DIR\n",
+    "from src.Util.Paths import DATA_DIR\n",
     "from src.Util import CoordinateSystemEnum\n",
     "from src.Data.CollisionEventLoader import CollisionEventLoader\n",
     "from src.TimeStep.ForAdjusting.PlacementStrategy import SinusoidStrategy, EquidistantStrategy\n",
